--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     ]
   },
   "devDependencies": {
-    "@types/react-redux": "^7.1.18"
+    "@types/react-redux": "^7.1.18",
+    "redux-devtools-extension": "^2.13.9"
   }
 }
